# fastapi-svelte

./: .dockerignore  .editorconfig  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.override.yaml  compose.test.host.yaml  compose.test.yaml  compose.yaml  compose.yml  database.db  docker-compose.yml  package.json
backend/: Dockerfile  Dockerfile.test  REALTIME.md  alembic.ini  config.py  conftest.py  database.db  db.py  db_crud.py  deps.py  initial_data.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_temp.txt  security.py  utils.py
backend/app/: analytics.py  backend_pre_start.py  cli.py  config.py  db.py  db_crud.py  deps.py  initial_data.py  initial_game_data.py  main.py  models.py  openfoodfacts.py  permissions.py  realtime.py  security.py  seed_food_data.py  utils.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0fc55b04baf6_removed_instructions_field.py  1975e36b706a_storing_refresh_tokens_in_database_now.py  3c8a5681a6b1_add_ondelete_cascade_to_refreshtoken.py  434c54812521_new_initial.py  4a9dc4a567a3_change_recipe_description_field_to_.py  56a47704f2df_initial.py  5fbb87540f32_add_calories_field_to_ingredient.py  6d6808607378_added_created_at_field_to_gamesession.py  7f1c2b9a0d21_make_refreshtoken_timestamps_timezone_aware.py  81778f400be6_added_created_at_field_to_recipe_model.py  81bdaea227a7_merge_heads.py  8c67b960ea4c_switch_to_using_recipeingredientlink_.py  92f0d59bbaab_convert_instruction_field_back_to_.py  942d39f57829_starting_on_h_c_s_game_added_.py  9be9019dea3f_should_be_all_the_models_done_for_the_.py  a1d4c07df17e_reconcile_removed_meals_schema.py  a215ad19f212_forgot_to_add_relationship_to_recipe_in_.py  a7c4e2f9b1d3_add_consumed_amount_to_recipe_ingredient.py  aabd10773219_instructions_field_now_dict_json.py  b05211d75551_add_image_to_recipe.py  b4d9a6e3c8f2_add_hourly_analytics_aggregates.py  c17d8a4c6a6c_added_amount_field_to_playerdrinklink.py  (+14 more)
backend/app/routers/: analytics.py  game.py  heroes.py  ingredients.py  login.py  recipes.py  roles.py  user_permissions.py  users.py  utils.py
backend/app/tests/: conftest.py
backend/permissions/: base.py  roles.py
backend/routers/: heroes.py  login.py  users.py
backend/scripts/: prestart.sh  test-entrypoint.sh
backend/tests/: conftest.py  test_model_defaults.py  test_openfoodfacts.py  test_permissions.py  test_recipe_consumption.py  test_security.py
backend/tests/crud/: test_user.py
backend/tests/utils/: user.py  utils.py
(+219 files in other folders)
