[project]
name = "app"
version = "0.1.0"
description = "A FastAPI backend for a Svelte frontend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "cloudinary>=1.44.1",
    "emails>=0.6",
    "fastapi[standard]>=0.128.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "sentry-sdk>=2.52.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "tenacity>=9.1.4",
    "typer>=0.21.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "prek>=0.3.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
app-cli = "app.cli:app"

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
